option('panda3d_headers_prefix', type: 'string', value: '/usr/include')
option('panda3d_libraries_prefix', type: 'string', value: '/usr/lib')
option('show_colliders', type: 'boolean', value: false)
option('debug_log_keyboard', type: 'boolean', value: false)
option('debug_log_gamepad', type: 'boolean', value: false)
option('check_eigen3_depend', type: 'boolean', value: true)
option('check_eigen3_required', type: 'boolean', value: false)
option('check_bullet_depend', type: 'boolean', value: false)
option('check_bullet_required', type: 'boolean', value: true)
